Risultato finale in pagina

--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,11 @@ main .square{
     background-color: rgb(167, 76, 76);
 }
 
+#result{
+    padding-top: 15px;
+    text-align: center;
+}
+
 /* FOOTER */
 footer{
     width: 70vw;
